--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.boot.maven.plugin.version>2.7.8</spring.boot.maven.plugin.version>
-        <spring.boot.dependencies.version>2.7.8</spring.boot.dependencies.version>
-        <spring.cloud-version>2021.0.3</spring.cloud-version>
+        <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
+        <spring.boot.dependencies.version>3.0.2</spring.boot.dependencies.version>
+        <spring.cloud-version>2022.0.1</spring.cloud-version>
     </properties>
 
     <dependencyManagement>
@@ -77,4 +77,14 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>netflix-candidates</id>
+            <name>Netflix Candidates</name>
+            <url>https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
