--- a/PhotoAppApiGateWay/pom.xml
+++ b/PhotoAppApiGateWay/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>jaxb-impl</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
