--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>PhotoAppDiscoveryService</module>
         <module>PhotoAppApiUsers</module>
         <module>PhotoAppApiGateWay</module>
+        <module>PhotoAppApiConfigServer</module>
     </modules>
 
     <name>PhotoAppService</name>
@@ -20,8 +21,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
-        <spring.boot.dependencies.version>3.0.2</spring.boot.dependencies.version>
+        <spring.boot.maven.plugin.version>3.0.3</spring.boot.maven.plugin.version>
+        <spring.boot.dependencies.version>3.0.3</spring.boot.dependencies.version>
         <spring.cloud-version>2022.0.1</spring.cloud-version>
     </properties>
 
