--- a/PhotoAppApiGateWay/src/main/resources/application.yml
+++ b/PhotoAppApiGateWay/src/main/resources/application.yml
@@ -55,6 +55,12 @@ spring:
   config:
     import:
     - optional:configserver:http://localhost:8012
+    
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
