--- a/PhotoAppApiConfigServer/src/main/resources/application.yml
+++ b/PhotoAppApiConfigServer/src/main/resources/application.yml
@@ -2,8 +2,6 @@ server:
   port: 8012
 
 spring:
-  application:
-    name: configserver
     
   cloud:
     config:
@@ -21,17 +19,13 @@ spring:
     username: guest
     password: guest
           
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8010/eureka
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8010/eureka
       
 management:
   endpoints:
     web:
       exposure:
-        include:
-        - beans
-        - info
-        - env
-        - busrefresh
+        include: '*'
