--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=config-servers
+spring.application.name=configserver
 server.port=8012
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=file://${user.home}/study/my-config-repo
