--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -8,9 +8,11 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
-spring.config.import=optional:configserver:http://localhost:8012 
+spring.config.import=optional:configserver:http://localhost:8012
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+management.endpoints.web.exposure.include=mappings
