--- a/PhotoAppApiGateWay/src/main/resources/application.yml
+++ b/PhotoAppApiGateWay/src/main/resources/application.yml
@@ -28,6 +28,15 @@ spring:
             - RemoveRequestHeader=Cookie
             - RewritePath=/users-ws/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
+            
+        - id: users-h2-console
+          uri: lb://users-ws
+          predicates:
+            - Path=/users-ws/h2-console/**
+            - Method=GET,POST,PUT,DELETE
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
         - id: users-ws
           uri: lb://users-ws
@@ -59,7 +68,7 @@ spring:
             - RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
   config:
-    import: optional:configserver:http://localhost:8012
+    import: optional:configserver:http://localhost:8888
     
   rabbitmq:
     host: localhost
@@ -70,7 +79,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8010/eureka
+      defaultZone: http://localhost:8761/eureka
 
 management:
   endpoint:
