--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 server.port=${PORT:0}
 spring.application.name=users-ws
-eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
+spring.datasource.username=leosun
+spring.datasource.password=oarnud9I
+spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
-spring.config.import=optional:configserver:http://localhost:8012
+spring.config.import=optional:configserver:http://localhost:8888
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
