--- a/PhotoAppDiscoveryService/src/main/resources/application.properties
+++ b/PhotoAppDiscoveryService/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-server.port=8010
+server.port=8761
+
 spring.application.name=discoveryservice
-eureka.server.enable-self-preservation=false
+
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.ip-address=true
