encryption and decryption

--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+encrypt.key-store.location=classpath:apiEncryptionKey.jks
+encrypt.key-store.password=oarnud9I
+encrypt.key-store.alias=apiEncryptionKey
+encrypt.key-store.secret=oarnud9I
