--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 management.endpoints.web.exposure.include=mappings
+
+logging.level.com.example.data.AlbumsServiceClient=debug
