--- a/PhotoAppApiGateWay/src/main/resources/application.yml
+++ b/PhotoAppApiGateWay/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
             - RewritePath=/users-ws/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-        - id: users-actuator
+        - id: users-ws-actuator
           uri: lb://users-ws
           predicates:
             - Path=/users-ws/actuator/**
