--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -17,6 +17,17 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-management.endpoints.web.exposure.include=mappings
+management.endpoints.web.exposure.include=*
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
 
 logging.level.com.example.data.AlbumsServiceClient=debug
+
+resilience4j.circuitbreaker.instances.albums-ws.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.albums-ws.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.albums-ws.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.albums-ws.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.albums-ws.sliding-window-size=2
+resilience4j.circuitbreaker.instances.albums-ws.minimum-number-of-calls=1
+resilience4j.circuitbreaker.instances.albums-ws.event-consumer-buffer-size=10
