--- a/PhotoAppApiAlbums/src/main/resources/application.properties
+++ b/PhotoAppApiAlbums/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.application.name=albums-ws
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+management.endpoints.web.exposure.include=*
+management.tracing.sampling.probability=1.0
+
+logging.file.name=albums-ws.log
