--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -21,6 +21,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
+management.tracing.sampling.probability=1.0
 
 logging.level.com.example.data.AlbumsServiceClient=debug
 
@@ -38,3 +39,5 @@ resilience4j.retry.instances.albums-ws.max-attempts=3
 resilience4j.retry.instances.albums-ws.wait-duration=2s
 resilience4j.retry.instances.albums-ws.enable-exponential-backoff=true
 resilience4j.retry.instances.albums-ws.exponential-backoff-multiplier=5
+
+logging.file.name=users-ws.log
