--- a/PhotoAppDiscoveryService/src/main/resources/application.properties
+++ b/PhotoAppDiscoveryService/src/main/resources/application.properties
@@ -7,3 +7,6 @@ eureka.client.fetch-registry=false
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.ip-address=true
+
+spring.security.user.name=test
+spring.security.user.password=test
