--- a/PhotoAppApiGateWay/src/main/resources/application.yml
+++ b/PhotoAppApiGateWay/src/main/resources/application.yml
@@ -2,6 +2,12 @@ server:
   port: 8082
 
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    
   application:
     name: api-gateway
   cloud:
