--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -34,3 +34,8 @@ resilience4j.retry.instances.albums-ws.enable-exponential-backoff=true
 resilience4j.retry.instances.albums-ws.exponential-backoff-multiplier=5
 
 logging.file.name=users-ws.log
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
