--- a/PhotoAppApiAlbums/pom.xml
+++ b/PhotoAppApiAlbums/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.example</groupId>
-		<artifactId>PhotoAppService</artifactId>
+		<artifactId>photoapp-service</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>PhotoAppApiAlbums</artifactId>
-	<name>PhotoAppApiAlbums</name>
+	<artifactId>photoapp-api-albums</artifactId>
+	<name>photoapp-api-albums</name>
 	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
