--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=configserver
 server.port=8888
-spring.profiles.active=native
+spring.profiles.active=git
 spring.cloud.config.server.native.search-locations=file://${user.home}/study/my-config-repo
 
 spring.cloud.config.server.git.uri=https://sundalei@bitbucket.org/sundalei/photoappserverconfig.git
 spring.cloud.config.server.git.username=sundalei
-spring.cloud.config.server.git.passphrase=ATBBmM92pXgMjdG2ZKnB3NTAUDqY89F7E774
+spring.cloud.config.server.git.password=ATBBmM92pXgMjdG2ZKnB3NTAUDqY89F7E774
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
 
