--- a/PhotoAppApiGateWay/pom.xml
+++ b/PhotoAppApiGateWay/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.example</groupId>
-		<artifactId>PhotoAppService</artifactId>
+		<artifactId>photoapp-service</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>PhotoAppApiGateWay</artifactId>
-	<name>PhotoAppApiGateWay</name>
+	<artifactId>photoapp-api-gateway</artifactId>
+	<name>photoapp-api-gateway</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
