--- a/PhotoAppApiGateWay/pom.xml
+++ b/PhotoAppApiGateWay/pom.xml
@@ -65,6 +65,7 @@
 		</dependency>
 		
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -73,4 +74,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
