--- a/PhotoAppApiConfigServer/src/main/resources/application.properties
+++ b/PhotoAppApiConfigServer/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=configserver
 server.port=8888
-spring.profiles.active=git
+spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=file://${user.home}/study/my-config-repo
 
 spring.cloud.config.server.git.uri=https://sundalei@bitbucket.org/sundalei/photoappserverconfig.git
