--- a/PhotoAppApiUsers/src/main/resources/application-production.properties
+++ b/PhotoAppApiUsers/src/main/resources/application-production.properties
@@ -40,4 +40,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-myapplication.environment=development profile
+myapplication.environment=production profile
